[tool.poetry]
name = "sast-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.34.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
responses = "^0.25.3"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"

[tool.coverage.run]
branch = true
omit = [
    "tests/*", 
    "**/*/__init__.py", 
    "setup.py",
    "**/*/__main__.py"
]

[tool.pytest.ini_options]
pythonpath = "sast_model"
addopts = "--cov-report term-missing --cov-config=.coveragerc --cov=sast_model/"
python_files = [
    "test_*.py"
]
testpaths = "tests"
log_cli = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
